--- a/GITAM-Lab/All_Programs_21_to_40.ipynb
+++ b/GITAM-Lab/All_Programs_21_to_40.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "19e2a7d1",
+   "id": "e81aaf57",
    "metadata": {},
    "source": [
     "#### 21. Write a program that inputs a text file. The program should print all of the unique words in the file in alphabetical order. ####"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9a793a9c",
+   "id": "23135927",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8818fe0",
+   "id": "45c70513",
    "metadata": {},
    "source": [
     "#### 22. Write a python program to open and write “hello world” into a file. ####"
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "feb0a195",
+   "id": "88a05896",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6891644b",
+   "id": "0fb64a15",
    "metadata": {},
    "source": [
     "#### 23. Write a python program to write the content “hi python programming” for the above existing file. ####"
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "9b5ea5e7",
+   "id": "f0260d75",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26d8d221",
+   "id": "4904ecbb",
    "metadata": {},
    "source": [
     "#### 24. Write a program to double a given number and add two numbers using lambda(). ####"
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8909993a",
+   "id": "a37ee91c",
    "metadata": {},
    "outputs": [
     {
@@ -217,9 +217,80 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3e14b2c3",
+   "metadata": {},
+   "source": [
+    "#### 25. Write a function that takes the lengths of three sides: side1, side2 and side3 of the triangle as the inputfrom the user using input function and return the area and perimeter of the triangle as atuple. Also, assert that sum of the length of any two sides is greater than the third side.####"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "3ef777bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the length of side1: 3\n",
+      "Enter the length of side2: 4\n",
+      "Enter the length of side3: 5\n",
+      "The area of the triangle is: 6.0\n",
+      "The perimeter of the triangle is: 12.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "# Function to compute area and perimeter of a triangle\n",
+    "def triangle_properties(side1, side2, side3):\n",
+    "    # Assert that the sum of the length of any two sides is greater than the third side\n",
+    "    assert (side1 + side2 > side3), \"The sum of side1 and side2 must be greater than side3\"\n",
+    "    assert (side1 + side3 > side2), \"The sum of side1 and side3 must be greater than side2\"\n",
+    "    assert (side2 + side3 > side1), \"The sum of side2 and side3 must be greater than side1\"\n",
+    "    \n",
+    "    # Calculate the perimeter of the triangle\n",
+    "    perimeter = side1 + side2 + side3\n",
+    "    \n",
+    "    # Calculate the semi-perimeter (s) for Heron's formula\n",
+    "    s = perimeter / 2\n",
+    "    \n",
+    "    # Calculate the area using Heron's formula\n",
+    "    area = math.sqrt(s * (s - side1) * (s - side2) * (s - side3))\n",
+    "    \n",
+    "    return (area, perimeter)\n",
+    "\n",
+    "# Driver code\n",
+    "\n",
+    "# Input the lengths of the sides of the triangle\n",
+    "side1 = float(input(\"Enter the length of side1: \"))\n",
+    "side2 = float(input(\"Enter the length of side2: \"))\n",
+    "side3 = float(input(\"Enter the length of side3: \"))\n",
+    "\n",
+    "# Call the function to compute area and perimeter\n",
+    "try:\n",
+    "    area, perimeter = triangle_properties(side1, side2, side3)\n",
+    "    print(f\"The area of the triangle is: {area}\")\n",
+    "    print(f\"The perimeter of the triangle is: {perimeter}\")\n",
+    "except AssertionError as e:\n",
+    "    print(e)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c35fef35",
+   "id": "85f4cbe2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9dfc67fa",
    "metadata": {},
    "outputs": [],
    "source": []
