--- a/GITAM-Lab/All_Programs_21_to_40.ipynb
+++ b/GITAM-Lab/All_Programs_21_to_40.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e81aaf57",
+   "id": "8a4cb60c",
    "metadata": {},
    "source": [
     "#### 21. Write a program that inputs a text file. The program should print all of the unique words in the file in alphabetical order. ####"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "23135927",
+   "id": "b5b81bad",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45c70513",
+   "id": "88b16cd2",
    "metadata": {},
    "source": [
     "#### 22. Write a python program to open and write “hello world” into a file. ####"
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "88a05896",
+   "id": "5fda15b3",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fb64a15",
+   "id": "3f6d8e1e",
    "metadata": {},
    "source": [
     "#### 23. Write a python program to write the content “hi python programming” for the above existing file. ####"
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f0260d75",
+   "id": "d46b170c",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4904ecbb",
+   "id": "ce2d1799",
    "metadata": {},
    "source": [
     "#### 24. Write a program to double a given number and add two numbers using lambda(). ####"
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a37ee91c",
+   "id": "99779168",
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e14b2c3",
+   "id": "8901fc69",
    "metadata": {},
    "source": [
     "#### 25. Write a function that takes the lengths of three sides: side1, side2 and side3 of the triangle as the inputfrom the user using input function and return the area and perimeter of the triangle as atuple. Also, assert that sum of the length of any two sides is greater than the third side.####"
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "3ef777bb",
+   "id": "c6a7f29a",
    "metadata": {},
    "outputs": [
     {
@@ -280,17 +280,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "85f4cbe2",
+   "cell_type": "markdown",
+   "id": "28766671",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### 26. Write a Python function to find then $n^{th}$ term of Fibonacci sequennce and its factorial. Return the result as a list. ####"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9dfc67fa",
+   "id": "ee43b6a2",
    "metadata": {},
    "outputs": [],
    "source": []
