--- a/GITAM-Lab/All_Programs_21_to_40.ipynb
+++ b/GITAM-Lab/All_Programs_21_to_40.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8a4cb60c",
+   "id": "14a8ac35",
    "metadata": {},
    "source": [
     "#### 21. Write a program that inputs a text file. The program should print all of the unique words in the file in alphabetical order. ####"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b5b81bad",
+   "id": "d5038194",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88b16cd2",
+   "id": "8a2cec72",
    "metadata": {},
    "source": [
     "#### 22. Write a python program to open and write “hello world” into a file. ####"
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5fda15b3",
+   "id": "def6b347",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f6d8e1e",
+   "id": "a8c13306",
    "metadata": {},
    "source": [
     "#### 23. Write a python program to write the content “hi python programming” for the above existing file. ####"
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d46b170c",
+   "id": "f2934583",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce2d1799",
+   "id": "cbdd1893",
    "metadata": {},
    "source": [
     "#### 24. Write a program to double a given number and add two numbers using lambda(). ####"
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "99779168",
+   "id": "d2ee42af",
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8901fc69",
+   "id": "0d08041c",
    "metadata": {},
    "source": [
     "#### 25. Write a function that takes the lengths of three sides: side1, side2 and side3 of the triangle as the inputfrom the user using input function and return the area and perimeter of the triangle as atuple. Also, assert that sum of the length of any two sides is greater than the third side.####"
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "c6a7f29a",
+   "id": "d5f8296d",
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28766671",
+   "id": "91925eca",
    "metadata": {},
    "source": [
     "#### 26. Write a Python function to find then $n^{th}$ term of Fibonacci sequennce and its factorial. Return the result as a list. ####"
@@ -289,11 +289,82 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "id": "5765c537",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the value of n: 5\n",
+      "The 5th Fibonacci term is: 5\n",
+      "The factorial of the 5th Fibonacci term is: 120\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "def fibonacci_and_factorial(n):\n",
+    "    # Calculate the nth Fibonacci number\n",
+    "    if n == 0:\n",
+    "        fib_n = 0\n",
+    "    elif n == 1:\n",
+    "        fib_n = 1\n",
+    "    else:\n",
+    "        a, b = 0, 1\n",
+    "        for i in range(2, n + 1):\n",
+    "            a, b = b, a + b\n",
+    "        fib_n = b\n",
+    "    \n",
+    "    # Calculate the factorial of the nth Fibonacci number\n",
+    "    factorial = math.factorial(fib_n)\n",
+    "    \n",
+    "    # Return the results as a list [nth Fibonacci term, factorial of that term]\n",
+    "    return fib_n, factorial\n",
+    "\n",
+    "# Driver Code\n",
+    "\n",
+    "n = int(input(\"Enter the value of n: \"))\n",
+    "result = fibonacci_and_factorial(n)\n",
+    "print(f\"The {n}th Fibonacci term is: {result[0]}\")\n",
+    "print(f\"The factorial of the {n}th Fibonacci term is: {result[1]}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f80d050",
+   "metadata": {},
+   "source": [
+    "#### Write a function that takes a number (>=10) as an input and return the digits of the number as a set. ####"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ee43b6a2",
+   "id": "522acddc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_digits(num):\n",
+    "    if num < 10:\n",
+    "        raise ValueError(\"The number should be greater than or equal to 10.\")\n",
+    "    \n",
+    "    # Convert the number to a string, then use a set to get unique digits\n",
+    "    digits = set(str(num))\n",
+    "    \n",
+    "    # Return the set of digits\n",
+    "    return digits\n",
+    "\n",
+    "# Example usage\n",
+    "try:\n",
+    "    num = int(input(\"Enter a number (>=10): \"))\n",
+    "    digits_set = get_digits(num)\n",
+    "    print(f\"The digits of {num} as a set are: {digits_set}\")\n",
+    "except ValueError as e:\n",
+    "    print(e)\n"
+   ]
   }
  ],
  "metadata": {
