--- a/GITAM-Lab/All_Programs_21_to_40.ipynb
+++ b/GITAM-Lab/All_Programs_21_to_40.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "14a8ac35",
+   "id": "300169ec",
    "metadata": {},
    "source": [
     "#### 21. Write a program that inputs a text file. The program should print all of the unique words in the file in alphabetical order. ####"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d5038194",
+   "id": "8a758767",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a2cec72",
+   "id": "4056c80e",
    "metadata": {},
    "source": [
     "#### 22. Write a python program to open and write “hello world” into a file. ####"
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "def6b347",
+   "id": "7e297837",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8c13306",
+   "id": "a87a5ac0",
    "metadata": {},
    "source": [
     "#### 23. Write a python program to write the content “hi python programming” for the above existing file. ####"
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f2934583",
+   "id": "7c795185",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbdd1893",
+   "id": "06c05cdb",
    "metadata": {},
    "source": [
     "#### 24. Write a program to double a given number and add two numbers using lambda(). ####"
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d2ee42af",
+   "id": "ddd21b16",
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d08041c",
+   "id": "8578f580",
    "metadata": {},
    "source": [
     "#### 25. Write a function that takes the lengths of three sides: side1, side2 and side3 of the triangle as the inputfrom the user using input function and return the area and perimeter of the triangle as atuple. Also, assert that sum of the length of any two sides is greater than the third side.####"
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d5f8296d",
+   "id": "f229594d",
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91925eca",
+   "id": "5ebdc25e",
    "metadata": {},
    "source": [
     "#### 26. Write a Python function to find then $n^{th}$ term of Fibonacci sequennce and its factorial. Return the result as a list. ####"
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "5765c537",
+   "id": "7d6fd0ff",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f80d050",
+   "id": "496ab8ae",
    "metadata": {},
    "source": [
     "#### Write a function that takes a number (>=10) as an input and return the digits of the number as a set. ####"
@@ -342,10 +342,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "522acddc",
+   "execution_count": 21,
+   "id": "a4ab465e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number (>=10): 234565321\n",
+      "The digits of 234565321 as a set are: {'1', '6', '4', '2', '3', '5'}\n"
+     ]
+    }
+   ],
    "source": [
     "def get_digits(num):\n",
     "    if num < 10:\n",
@@ -357,13 +366,62 @@
     "    # Return the set of digits\n",
     "    return digits\n",
     "\n",
+    "\n",
     "# Example usage\n",
     "try:\n",
     "    num = int(input(\"Enter a number (>=10): \"))\n",
     "    digits_set = get_digits(num)\n",
     "    print(f\"The digits of {num} as a set are: {digits_set}\")\n",
     "except ValueError as e:\n",
-    "    print(e)\n"
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd32e841",
+   "metadata": {},
+   "source": [
+    "#### 28. Use dictionary to store marks of the students in 4 subjects. Write a function to find the name of the student securing highest percentage. (Hint:Names of students are unique) ####"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3cb0c9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def highest_percentage(students_marks):\n",
+    "    highest = None\n",
+    "    max_percentage = 0\n",
+    "    \n",
+    "    for student, marks in students_marks.items():\n",
+    "        # Calculate the total marks and percentage for the student\n",
+    "        total_marks = sum(marks)\n",
+    "        percentage = (total_marks / 400) * 100  # Assuming each subject is out of 100\n",
+    "        \n",
+    "        # Check if this student has the highest percentage so far\n",
+    "        if percentage > max_percentage:\n",
+    "            max_percentage = percentage\n",
+    "            highest = student\n",
+    "    \n",
+    "    return highest, max_percentage\n",
+    "\n",
+    "# Driver code\n",
+    "\n",
+    "# Dictionary to store the marks of students in 4 subjects\n",
+    "students_marks = {\n",
+    "    \"Alice\": [85, 90, 88, 92],\n",
+    "    \"Bob\": [78, 82, 80, 85],\n",
+    "    \"Charlie\": [92, 95, 98, 96],\n",
+    "    \"David\": [70, 75, 78, 72]\n",
+    "}\n",
+    "\n",
+    "# Find the student with the highest percentage\n",
+    "student, percentage = highest_percentage(students_marks)\n",
+    "\n",
+    "# Output the result\n",
+    "print(f\"The student with the highest percentage is {student} with {percentage:.2f}%\")\n"
    ]
   }
  ],
