--- a/GITAM-Lab/All_Programs_21_to_40.ipynb
+++ b/GITAM-Lab/All_Programs_21_to_40.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "300169ec",
+   "id": "15725631",
    "metadata": {},
    "source": [
     "#### 21. Write a program that inputs a text file. The program should print all of the unique words in the file in alphabetical order. ####"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8a758767",
+   "id": "9cfd9109",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4056c80e",
+   "id": "a223063e",
    "metadata": {},
    "source": [
     "#### 22. Write a python program to open and write “hello world” into a file. ####"
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7e297837",
+   "id": "fa65c4ba",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a87a5ac0",
+   "id": "51ebce25",
    "metadata": {},
    "source": [
     "#### 23. Write a python program to write the content “hi python programming” for the above existing file. ####"
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7c795185",
+   "id": "5e187ec9",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06c05cdb",
+   "id": "cf936a92",
    "metadata": {},
    "source": [
     "#### 24. Write a program to double a given number and add two numbers using lambda(). ####"
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ddd21b16",
+   "id": "f6fbc394",
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8578f580",
+   "id": "6f2fb150",
    "metadata": {},
    "source": [
     "#### 25. Write a function that takes the lengths of three sides: side1, side2 and side3 of the triangle as the inputfrom the user using input function and return the area and perimeter of the triangle as atuple. Also, assert that sum of the length of any two sides is greater than the third side.####"
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f229594d",
+   "id": "60fa4a36",
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ebdc25e",
+   "id": "bc663088",
    "metadata": {},
    "source": [
     "#### 26. Write a Python function to find then $n^{th}$ term of Fibonacci sequennce and its factorial. Return the result as a list. ####"
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "7d6fd0ff",
+   "id": "4d2562e4",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "496ab8ae",
+   "id": "a284f244",
    "metadata": {},
    "source": [
     "#### Write a function that takes a number (>=10) as an input and return the digits of the number as a set. ####"
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a4ab465e",
+   "id": "7e6a89a4",
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd32e841",
+   "id": "acdabb18",
    "metadata": {},
    "source": [
     "#### 28. Use dictionary to store marks of the students in 4 subjects. Write a function to find the name of the student securing highest percentage. (Hint:Names of students are unique) ####"
@@ -386,10 +386,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b3cb0c9f",
+   "execution_count": 22,
+   "id": "339a36aa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The student with the highest percentage is Charlie with 95.25%\n"
+     ]
+    }
+   ],
    "source": [
     "def highest_percentage(students_marks):\n",
     "    highest = None\n",
@@ -422,6 +430,54 @@
     "\n",
     "# Output the result\n",
     "print(f\"The student with the highest percentage is {student} with {percentage:.2f}%\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ecf3ab99",
+   "metadata": {},
+   "source": [
+    "#### Write a function that takes a sentence as input from the user and calculates the frequency of each letter. Use avariable of dictionary type to maintain the count. ####"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e655cead",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def letter_frequency(sentence):\n",
+    "    # Initialize an empty dictionary to store letter frequencies\n",
+    "    frequency = {}\n",
+    "\n",
+    "    # Loop through each character in the sentence\n",
+    "    for char in sentence:\n",
+    "        # Check if the character is a letter (ignoring spaces and punctuation)\n",
+    "        if char.isalpha():\n",
+    "            # Convert the character to lowercase for case-insensitive counting\n",
+    "            char = char.lower()\n",
+    "            # Increment the frequency count for the character\n",
+    "            if char in frequency:\n",
+    "                frequency[char] += 1\n",
+    "            else:\n",
+    "                frequency[char] = 1\n",
+    "\n",
+    "    # Return the dictionary with letter frequencies\n",
+    "    return frequency\n",
+    "\n",
+    "# Driver code\n",
+    "# Input sentence from the user\n",
+    "\n",
+    "sentence = input(\"Enter a sentence: \")\n",
+    "\n",
+    "# Get the letter frequency\n",
+    "frequency = letter_frequency(sentence)\n",
+    "\n",
+    "# Print the result\n",
+    "print(\"Letter frequencies:\")\n",
+    "for letter, count in frequency.items():\n",
+    "    print(f\"{letter}: {count}\")\n"
    ]
   }
  ],
