--- a/GITAM-Lab/All_Programs_21_to_40.ipynb
+++ b/GITAM-Lab/All_Programs_21_to_40.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "15725631",
+   "id": "58d18089",
    "metadata": {},
    "source": [
     "#### 21. Write a program that inputs a text file. The program should print all of the unique words in the file in alphabetical order. ####"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9cfd9109",
+   "id": "9149ec10",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a223063e",
+   "id": "f8af6828",
    "metadata": {},
    "source": [
     "#### 22. Write a python program to open and write “hello world” into a file. ####"
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fa65c4ba",
+   "id": "c8fa6052",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51ebce25",
+   "id": "dc242317",
    "metadata": {},
    "source": [
     "#### 23. Write a python program to write the content “hi python programming” for the above existing file. ####"
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5e187ec9",
+   "id": "204e8897",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf936a92",
+   "id": "59aa4d2e",
    "metadata": {},
    "source": [
     "#### 24. Write a program to double a given number and add two numbers using lambda(). ####"
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f6fbc394",
+   "id": "766ce74f",
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f2fb150",
+   "id": "512c9121",
    "metadata": {},
    "source": [
     "#### 25. Write a function that takes the lengths of three sides: side1, side2 and side3 of the triangle as the inputfrom the user using input function and return the area and perimeter of the triangle as atuple. Also, assert that sum of the length of any two sides is greater than the third side.####"
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "60fa4a36",
+   "id": "d4d7b829",
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc663088",
+   "id": "ec67ad58",
    "metadata": {},
    "source": [
     "#### 26. Write a Python function to find then $n^{th}$ term of Fibonacci sequennce and its factorial. Return the result as a list. ####"
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "4d2562e4",
+   "id": "7a58b12b",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a284f244",
+   "id": "c503340a",
    "metadata": {},
    "source": [
     "#### Write a function that takes a number (>=10) as an input and return the digits of the number as a set. ####"
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "7e6a89a4",
+   "id": "a1377444",
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acdabb18",
+   "id": "c563fc50",
    "metadata": {},
    "source": [
     "#### 28. Use dictionary to store marks of the students in 4 subjects. Write a function to find the name of the student securing highest percentage. (Hint:Names of students are unique) ####"
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "339a36aa",
+   "id": "134d2962",
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecf3ab99",
+   "id": "75b63e75",
    "metadata": {},
    "source": [
     "#### Write a function that takes a sentence as input from the user and calculates the frequency of each letter. Use avariable of dictionary type to maintain the count. ####"
@@ -442,10 +442,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e655cead",
+   "execution_count": 23,
+   "id": "a1d05346",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a sentence: This is a Python Programming Lab and we are learning Python fundamentals.\n",
+      "Letter frequencies:\n",
+      "t: 4\n",
+      "h: 3\n",
+      "i: 4\n",
+      "s: 3\n",
+      "a: 8\n",
+      "p: 3\n",
+      "y: 2\n",
+      "o: 3\n",
+      "n: 8\n",
+      "r: 4\n",
+      "g: 3\n",
+      "m: 3\n",
+      "l: 3\n",
+      "b: 1\n",
+      "d: 2\n",
+      "w: 1\n",
+      "e: 4\n",
+      "f: 1\n",
+      "u: 1\n"
+     ]
+    }
+   ],
    "source": [
     "def letter_frequency(sentence):\n",
     "    # Initialize an empty dictionary to store letter frequencies\n",
@@ -477,8 +505,24 @@
     "# Print the result\n",
     "print(\"Letter frequencies:\")\n",
     "for letter, count in frequency.items():\n",
-    "    print(f\"{letter}: {count}\")\n"
+    "    print(f\"{letter}: {count}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cdd74ec",
+   "metadata": {},
+   "source": [
+    "#### 30. Write a function that takes a number with two or more digits as an input and finds its reverse and computes the sum of its digits. ####"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9042549",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
