--- a/GITAM-Lab/All_Programs_21_to_40.ipynb
+++ b/GITAM-Lab/All_Programs_21_to_40.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "58d18089",
+   "id": "9b178dbb",
    "metadata": {},
    "source": [
     "#### 21. Write a program that inputs a text file. The program should print all of the unique words in the file in alphabetical order. ####"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9149ec10",
+   "id": "7b9c4a42",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8af6828",
+   "id": "754bc9b8",
    "metadata": {},
    "source": [
     "#### 22. Write a python program to open and write “hello world” into a file. ####"
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c8fa6052",
+   "id": "3d1b777a",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc242317",
+   "id": "dc2187da",
    "metadata": {},
    "source": [
     "#### 23. Write a python program to write the content “hi python programming” for the above existing file. ####"
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "204e8897",
+   "id": "2da3131d",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59aa4d2e",
+   "id": "4c61ea15",
    "metadata": {},
    "source": [
     "#### 24. Write a program to double a given number and add two numbers using lambda(). ####"
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "766ce74f",
+   "id": "80b15617",
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "512c9121",
+   "id": "0d45158f",
    "metadata": {},
    "source": [
     "#### 25. Write a function that takes the lengths of three sides: side1, side2 and side3 of the triangle as the inputfrom the user using input function and return the area and perimeter of the triangle as atuple. Also, assert that sum of the length of any two sides is greater than the third side.####"
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d4d7b829",
+   "id": "6e854252",
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec67ad58",
+   "id": "d6f3bcab",
    "metadata": {},
    "source": [
     "#### 26. Write a Python function to find then $n^{th}$ term of Fibonacci sequennce and its factorial. Return the result as a list. ####"
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "7a58b12b",
+   "id": "ce082d7b",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c503340a",
+   "id": "9deb2e87",
    "metadata": {},
    "source": [
     "#### Write a function that takes a number (>=10) as an input and return the digits of the number as a set. ####"
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a1377444",
+   "id": "0fc97148",
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c563fc50",
+   "id": "a8b9b390",
    "metadata": {},
    "source": [
     "#### 28. Use dictionary to store marks of the students in 4 subjects. Write a function to find the name of the student securing highest percentage. (Hint:Names of students are unique) ####"
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "134d2962",
+   "id": "2785060f",
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75b63e75",
+   "id": "6ddcbf64",
    "metadata": {},
    "source": [
     "#### Write a function that takes a sentence as input from the user and calculates the frequency of each letter. Use avariable of dictionary type to maintain the count. ####"
@@ -443,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "a1d05346",
+   "id": "fbefd577",
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cdd74ec",
+   "id": "37debb56",
    "metadata": {},
    "source": [
     "#### 30. Write a function that takes a number with two or more digits as an input and finds its reverse and computes the sum of its digits. ####"
@@ -518,11 +518,87 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "id": "6aaaa69b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number with two or more digits: 2356521\n",
+      "The reverse of the number is: 1256532\n",
+      "The sum of the digits is: 24\n"
+     ]
+    }
+   ],
+   "source": [
+    "def reverse_and_sum(number):\n",
+    "    # Ensure the number has two or more digits\n",
+    "    if number < 10:\n",
+    "        raise ValueError(\"The number must have two or more digits.\")\n",
+    "\n",
+    "    # Convert the number to a string to easily reverse and iterate through digits\n",
+    "    num_str = str(number)\n",
+    "    \n",
+    "    # Find the reverse of the number\n",
+    "    reversed_num = int(num_str[::-1])\n",
+    "    \n",
+    "    # Calculate the sum of the digits\n",
+    "    sum_of_digits = sum(int(digit) for digit in num_str)\n",
+    "    \n",
+    "    return reversed_num, sum_of_digits\n",
+    "\n",
+    "# Driver code\n",
+    "\n",
+    "# Input a number from the user\n",
+    "try:\n",
+    "    num = int(input(\"Enter a number with two or more digits: \"))\n",
+    "    \n",
+    "    # Get the reverse and sum of digits\n",
+    "    reversed_num, sum_digits = reverse_and_sum(num)\n",
+    "    \n",
+    "    # Output the results\n",
+    "    print(f\"The reverse of the number is: {reversed_num}\")\n",
+    "    print(f\"The sum of the digits is: {sum_digits}\")\n",
+    "except ValueError as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3616b036",
+   "metadata": {},
+   "source": [
+    "#### 31. Write a function that takes two numbers as input parameters and returns their least common multiple. ####"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a9042549",
+   "id": "c463af76",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import math\n",
+    "\n",
+    "def lcm(a, b):\n",
+    "    # Use the formula LCM(a, b) = |a * b| / GCD(a, b)\n",
+    "    return abs(a * b) // math.gcd(a, b)\n",
+    "\n",
+    "# Input two numbers from the user\n",
+    "try:\n",
+    "    num1 = int(input(\"Enter the first number: \"))\n",
+    "    num2 = int(input(\"Enter the second number: \"))\n",
+    "    \n",
+    "    # Calculate the LCM\n",
+    "    result = lcm(num1, num2)\n",
+    "    \n",
+    "    # Output the result\n",
+    "    print(f\"The Least Common Multiple (LCM) of {num1} and {num2} is: {result}\")\n",
+    "except ValueError:\n",
+    "    print(\"Please enter valid integers.\")\n"
+   ]
   }
  ],
  "metadata": {
