--- a/GITAM-Lab/All_Programs_21_to_40.ipynb
+++ b/GITAM-Lab/All_Programs_21_to_40.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9b178dbb",
+   "id": "6ba51907",
    "metadata": {},
    "source": [
     "#### 21. Write a program that inputs a text file. The program should print all of the unique words in the file in alphabetical order. ####"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7b9c4a42",
+   "id": "bdd6aed0",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "754bc9b8",
+   "id": "f4b358f3",
    "metadata": {},
    "source": [
     "#### 22. Write a python program to open and write “hello world” into a file. ####"
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3d1b777a",
+   "id": "1504eff1",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc2187da",
+   "id": "56f44ec8",
    "metadata": {},
    "source": [
     "#### 23. Write a python program to write the content “hi python programming” for the above existing file. ####"
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2da3131d",
+   "id": "c05e5e4b",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c61ea15",
+   "id": "5474b46d",
    "metadata": {},
    "source": [
     "#### 24. Write a program to double a given number and add two numbers using lambda(). ####"
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "80b15617",
+   "id": "d3307b24",
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d45158f",
+   "id": "7c4596a2",
    "metadata": {},
    "source": [
     "#### 25. Write a function that takes the lengths of three sides: side1, side2 and side3 of the triangle as the inputfrom the user using input function and return the area and perimeter of the triangle as atuple. Also, assert that sum of the length of any two sides is greater than the third side.####"
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "6e854252",
+   "id": "3cee58f8",
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6f3bcab",
+   "id": "4b55db5a",
    "metadata": {},
    "source": [
     "#### 26. Write a Python function to find then $n^{th}$ term of Fibonacci sequennce and its factorial. Return the result as a list. ####"
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "ce082d7b",
+   "id": "d231d477",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9deb2e87",
+   "id": "2b5bcede",
    "metadata": {},
    "source": [
     "#### Write a function that takes a number (>=10) as an input and return the digits of the number as a set. ####"
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "0fc97148",
+   "id": "d5d8f700",
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8b9b390",
+   "id": "b91a457f",
    "metadata": {},
    "source": [
     "#### 28. Use dictionary to store marks of the students in 4 subjects. Write a function to find the name of the student securing highest percentage. (Hint:Names of students are unique) ####"
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "2785060f",
+   "id": "53e2e8ea",
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ddcbf64",
+   "id": "ed50dff6",
    "metadata": {},
    "source": [
     "#### Write a function that takes a sentence as input from the user and calculates the frequency of each letter. Use avariable of dictionary type to maintain the count. ####"
@@ -443,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "fbefd577",
+   "id": "514371ad",
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37debb56",
+   "id": "a3e4583f",
    "metadata": {},
    "source": [
     "#### 30. Write a function that takes a number with two or more digits as an input and finds its reverse and computes the sum of its digits. ####"
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "6aaaa69b",
+   "id": "ecb36c3d",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3616b036",
+   "id": "31b57dfd",
    "metadata": {},
    "source": [
     "#### 31. Write a function that takes two numbers as input parameters and returns their least common multiple. ####"
@@ -575,16 +575,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c463af76",
+   "execution_count": 27,
+   "id": "96992b95",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the first number: 34\n",
+      "Enter the second number: 12\n",
+      "The Least Common Multiple (LCM) of 34 and 12 is: 204\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
     "def lcm(a, b):\n",
     "    # Use the formula LCM(a, b) = |a * b| / GCD(a, b)\n",
     "    return abs(a * b) // math.gcd(a, b)\n",
+    "\n",
+    "# Driver code\n",
     "\n",
     "# Input two numbers from the user\n",
     "try:\n",
@@ -597,7 +609,32 @@
     "    # Output the result\n",
     "    print(f\"The Least Common Multiple (LCM) of {num1} and {num2} is: {result}\")\n",
     "except ValueError:\n",
-    "    print(\"Please enter valid integers.\")\n"
+    "    print(\"Please enter valid integers.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "568da6f3",
+   "metadata": {},
+   "source": [
+    "#### 32. Write a function that takes two numbers as input parameters and returns their highest common factor. ####"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e622f29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hcf(a, b):\n",
+    "    while b:\n",
+    "        a, b = b, a % b\n",
+    "    return a\n",
+    "\n",
+    "# drivr code\n",
+    "\n",
+    "print(\"hcf of {} and {} is {}.\", 6, 15, hcf())"
    ]
   }
  ],
