--- a/GITAM-Lab/All_Programs_21_to_40.ipynb
+++ b/GITAM-Lab/All_Programs_21_to_40.ipynb
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "568da6f3",
+   "id": "3b01e366",
    "metadata": {},
    "source": [
     "#### 32. Write a function that takes two numbers as input parameters and returns their highest common factor. ####"
@@ -622,10 +622,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9e622f29",
+   "execution_count": 5,
+   "id": "3595dae2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hcf of 6 and 15 is 3.\n"
+     ]
+    }
+   ],
    "source": [
     "def hcf(a, b):\n",
     "    while b:\n",
@@ -634,8 +642,54 @@
     "\n",
     "# drivr code\n",
     "\n",
-    "print(\"hcf of {} and {} is {}.\", 6, 15, hcf())"
+    "print(\"hcf of {} and {} is {}.\".format(6, 15, hcf(6,15)))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d196fc0",
+   "metadata": {},
+   "source": [
+    "#### Write a function that takes a number as an input and determine whether it is prime or not."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7c17c453",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3560688042.py, line 12)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[8], line 12\u001b[1;36m\u001b[0m\n\u001b[1;33m    test = is_prime(num): print(\"Entered number is a prime number\")? print(\"entered number is not a prime number\")\u001b[0m\n\u001b[1;37m                        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_prime(num):\n",
+    "    if num <= 1:\n",
+    "        return False\n",
+    "    for i in range(2, int(num ** 0.5) + 1):\n",
+    "        if num % i == 0:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "# Driver code\n",
+    "\n",
+    "num = int(input(\"Please input an integer number\"))\n",
+    "test = is_prime(num): print(\"Entered number is a prime number\")? print(\"entered number is not a prime number\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2bb4a81e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
