--- a/GITAM-Lab/All_Programs_21_to_40.ipynb
+++ b/GITAM-Lab/All_Programs_21_to_40.ipynb
@@ -337,7 +337,7 @@
    "id": "2b5bcede",
    "metadata": {},
    "source": [
-    "#### Write a function that takes a number (>=10) as an input and return the digits of the number as a set. ####"
+    "#### 27. Write a function that takes a number (>=10) as an input and return the digits of the number as a set. ####"
    ]
   },
   {
@@ -437,7 +437,7 @@
    "id": "ed50dff6",
    "metadata": {},
    "source": [
-    "#### Write a function that takes a sentence as input from the user and calculates the frequency of each letter. Use avariable of dictionary type to maintain the count. ####"
+    "#### 29. Write a function that takes a sentence as input from the user and calculates the frequency of each letter. Use avariable of dictionary type to maintain the count. ####"
    ]
   },
   {
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b01e366",
+   "id": "947f5dc6",
    "metadata": {},
    "source": [
     "#### 32. Write a function that takes two numbers as input parameters and returns their highest common factor. ####"
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3595dae2",
+   "id": "6a77a53f",
    "metadata": {},
    "outputs": [
     {
@@ -647,24 +647,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d196fc0",
+   "id": "570f2e8c",
    "metadata": {},
    "source": [
-    "#### Write a function that takes a number as an input and determine whether it is prime or not."
+    "#### 33. Write a function that takes a number as an input and determine whether it is prime or not."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "7c17c453",
+   "execution_count": 10,
+   "id": "646e0ccc",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3560688042.py, line 12)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[8], line 12\u001b[1;36m\u001b[0m\n\u001b[1;33m    test = is_prime(num): print(\"Entered number is a prime number\")? print(\"entered number is not a prime number\")\u001b[0m\n\u001b[1;37m                        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please input an integer number67\n",
+      "Entered number is a prime number.\n"
      ]
     }
    ],
@@ -680,13 +680,17 @@
     "# Driver code\n",
     "\n",
     "num = int(input(\"Please input an integer number\"))\n",
-    "test = is_prime(num): print(\"Entered number is a prime number\")? print(\"entered number is not a prime number\")"
+    "test = is_prime(num)\n",
+    "if test == True:\n",
+    "    print(\"Entered number is a prime number.\")\n",
+    "else:\n",
+    "    print(\"entered number is not a prime number.\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bb4a81e",
+   "id": "3ff9e455",
    "metadata": {},
    "outputs": [],
    "source": []
